--- a/PCA/Clustering/Clustering_Notebook1.ipynb
+++ b/PCA/Clustering/Clustering_Notebook1.ipynb
@@ -144,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -827,7 +829,9 @@
    "metadata": {},
    "source": [
     "1. En los datos obtenidos podemos notar en el caso de la variable de duracion en ms que 3 valores que son continuos respecto a la duracion de la musisca excepto en 3 canciones que serian representadas por los puntos rojos que tienen mayor duracion.\n",
-    "2. "
+    "2. En las variables energy y loudness se nos genra una curva que podriamos representar que mientras mas energia tiene la cancion mas sonoridad tienen estas.\n",
+    "3. Existe una relacion inversa entre acusticness y loudness interpretando que mientras mas acustica es la cancion menos ruidosa sera esta.\n",
+    "4. En todas las rectas que intersectan con duration_ms se pueden notar claramente los 4 grupos generados."
    ]
   },
   {
@@ -851,7 +855,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
